Fri Apr 12 00:15:32 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * include/makeinclude/platform_sunos5_sunc++.GNU:
        * ace/config-sunos5.5.h:

          Reverted to status quo. If and when things go fine, I will
          re-enable them. Too many things breaking currently.

Thu Apr 11 20:37:53 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ace/OS.i (ftell):
        * ace/OS.h:

          Added new wrappers for ftell, fgetpos & fsetpos.

        * ACEXML/common/FileCharStream.cpp:
        * ACEXML/common/FileCharStream.h:

          Implemented the previously unavailable available() call.

Thu Apr 11 20:06:41 2002  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/display_logfile.cpp: Spacing/line length
          changes so it fits on the book pages.

Thu Apr 11 18:29:27 2002  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/Makefile: New Makefile to build display_logfile.

        * examples/C++NPv2/display_logfile.cpp: Finished and debugged on Linux.

Thu Apr 11 22:07:40 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* netsvcs/lib/Client_Logging_Handler.cpp: Added missing
	  Log_Record.h include.

	* tests/Svc_Handler_Test.cpp:
	  Changed ACE_Log_Record::MAXLOGMSGLEN to ACE_MAXLOGMSGLEN.

Thu Apr 11 20:04:22 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/ARGV.h:  Rolled back the change and readded ACE.h.
	  Too many error down the line to fix.

	* ace/Sample_History.cpp:  Added include of OS.h.

	* apps/apps/gperf/src/Options.h: Added include of OS.h.

Thu Apr 11 14:37:09 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/config-win32-common.h: Added ACE_LACKS_PARAM_H.

Thu Apr 11 18:21:25 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/Basic_Types.h:  Added include of <sys/param.h>
	  to pickup MAXPATHLEN if available and get rid of warning.

Thu Apr 11 17:37:20 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/Basic_Types.h: Added missing typedefs for pid_t and